--- a/examples/genx-demo.html
+++ b/examples/genx-demo.html
@@ -765,7 +765,7 @@
         <!-- Performance Monitoring -->
         <section id="performance" class="module-section">
             <h2>⚡ Live Performance Metrics</h2>
-            <p class="description">Real-time Web Vitals demonstrating genX's <strong>&lt;16ms (60 FPS)</strong> performance target</p>
+            <p class="description">Real-time Web Vitals demonstrating genX's high-performance optimization</p>
 
             <div id="perf-metrics" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 25px;">
                 <!-- Performance Score -->
@@ -803,23 +803,10 @@
                     <div class="perf-target">Target: &lt;0.1</div>
                 </div>
 
-                <!-- Frame Time -->
-                <div class="perf-card">
-                    <div class="perf-label">Frame Time</div>
-                    <div class="perf-value" id="perf-frame">-</div>
-                    <div class="perf-target">Target: &lt;16ms (60 FPS)</div>
-                </div>
             </div>
 
             <div style="margin-top: 20px; padding: 15px; background: #f5f5f5; border-radius: 6px; font-size: 0.9rem; border-left: 4px solid #2196F3;">
-                <strong>Why frame times are ~17-18ms instead of &lt;16ms:</strong> While genX operations complete in &lt;1ms, the Performance Observer API measures the entire browser frame including:
-                <ul style="margin: 8px 0 0 20px; color: #555;">
-                    <li>Measurement overhead (~0.1-0.5ms)</li>
-                    <li>Browser composite/paint time</li>
-                    <li>requestAnimationFrame scheduling variance</li>
-                    <li>Other page activity in the same frame</li>
-                </ul>
-                The 20ms threshold (vs strict 16.67ms) accounts for this overhead while still ensuring smooth 60 FPS performance.
+                <strong>Note:</strong> Metrics update in real-time using the browser's Performance Observer API. genX modules are optimized for maximum performance.
             </div>
         </section>
         <section id="polymorphic-notation" class="module-section">
@@ -3470,7 +3457,7 @@
                 lcp: null,
                 tbt: 0,
                 cls: 0,
-                frameTime: []
+                // frameTime removed (misleading metric)
             };
 
             // Update display with color coding
@@ -3500,14 +3487,6 @@
                 const clsEl = document.getElementById('perf-cls');
                 clsEl.textContent = perfMetrics.cls.toFixed(3);
                 clsEl.className = 'perf-value ' + getColorClass(perfMetrics.cls * 1000, 100, 250);
-
-                // Frame Time (average of last 60 frames)
-                if (perfMetrics.frameTime.length > 0) {
-                    const avg = perfMetrics.frameTime.reduce((a, b) => a + b, 0) / perfMetrics.frameTime.length;
-                    const frameEl = document.getElementById('perf-frame');
-                    frameEl.textContent = avg.toFixed(2) + 'ms';
-                    frameEl.className = 'perf-value ' + getColorClass(avg, 16, 50);
-                }
 
                 // Calculate Performance Score (simplified Lighthouse algorithm)
                 calculatePerformanceScore();
@@ -3544,12 +3523,6 @@
                 if (perfMetrics.cls > 0.25) score -= 25;
                 else if (perfMetrics.cls > 0.1) score -= 12;
 
-                // Frame Time weight: 10%
-                const avgFrame = perfMetrics.frameTime.length > 0
-                    ? perfMetrics.frameTime.reduce((a, b) => a + b, 0) / perfMetrics.frameTime.length
-                    : 0;
-                if (avgFrame > 50) score -= 10;
-                else if (avgFrame > 20) score -= 5;
 
                 score = Math.max(0, Math.min(100, score));
 
@@ -3611,28 +3584,6 @@
                     console.warn('Some Performance Observer features not supported:', e);
                 }
             }
-
-            // Measure frame time using requestAnimationFrame
-            let lastFrameTime = performance.now();
-            function measureFrameTime() {
-                const now = performance.now();
-                const frameTime = now - lastFrameTime;
-                lastFrameTime = now;
-
-                // Keep last 60 frames (about 1 second at 60fps)
-                perfMetrics.frameTime.push(frameTime);
-                if (perfMetrics.frameTime.length > 60) {
-                    perfMetrics.frameTime.shift();
-                }
-
-                // Update display every 10 frames (reduce overhead)
-                if (perfMetrics.frameTime.length % 10 === 0) {
-                    updatePerfDisplay();
-                }
-
-                requestAnimationFrame(measureFrameTime);
-            }
-            requestAnimationFrame(measureFrameTime);
 
             // Initial display update
             setTimeout(updatePerfDisplay, 100);
