docs: add CODE_OF_CONDUCT, refactor CONTRIBUTING, reorganize README with architecture first
- Add comprehensive CODE_OF_CONDUCT.md for community guidelines
- Streamline CONTRIBUTING.md adapted specifically for genX project
- Reorganize README: move Architecture before Quick Start, mark bindX complete, add smartX to modules
- Implement 5-column TOC layout for improved readability
- Update examples/genx-demo.html to use minified dist files
- Enhance package.json: add build scripts for all modules with minify and gzip, update size limits

--- a/examples/genx-demo.html
+++ b/examples/genx-demo.html
@@ -10,17 +10,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@400&family=Mulish:wght@400;500;600&family=Inconsolata:wght@400&display=swap" rel="stylesheet">
 
-    <!-- Load genX modules -->
+    <!-- Load genX modules (minified) -->
     <script src="../src/genx-common.js"></script>
-    <script src="../src/smartx.js"></script>
-    <script src="../src/fmtx.js?v=3"></script>
-    <script src="../src/accx.js"></script>
-    <script src="../src/bindx.js"></script>
-    <script src="../src/dragx.js"></script>
-    <script src="../src/loadx.js"></script>
+    <script src="../dist/modules/smartx.min.js"></script>
+    <script src="../dist/modules/fmtx.min.js"></script>
+    <script src="../dist/modules/accx.min.js"></script>
+    <script src="../dist/modules/bindx.min.js"></script>
+    <script src="../dist/modules/dragx.min.js"></script>
+    <script src="../dist/modules/loadx.min.js"></script>
     <link rel="stylesheet" href="../src/loadx.css">
-    <script src="../src/navx.js"></script>
-    <script src="../src/tablex.js"></script>
+    <script src="../dist/modules/navx.min.js"></script>
+    <script src="../dist/modules/tablex.min.js"></script>
     <link rel="stylesheet" href="../src/tablex.css">
 
     <style>
