refactor(site): emphasize backend-free interactivity in hero copy
Keep "The Tailwind of Frontend Behavior" tagline while highlighting
that genX brings backend-like features to static sites.

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>genX - The Tailwind of Frontend Behavior</title>
-  <meta name="description" content="Add behavior to HTML with simple attributes. No JavaScript to write, no frameworks to learn.">
+  <meta name="description" content="Backend features without the backend. Add interactivity to any static site with simple HTML attributes.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
@@ -26,11 +26,11 @@
   <main>
     <section class="hero">
       <div class="container">
-        <p class="hero__tagline">Declarative Frontend Behavior</p>
+        <p class="hero__tagline">The Tailwind of Frontend Behavior</p>
         <h1 class="hero__title">gen<span class="x">X</span></h1>
         <p class="hero__subtitle">
-          Add behavior to HTML with simple attributes.<br>
-          No JavaScript to write. No frameworks to learn.
+          Backend features without the backend.<br>
+          Add interactivity to any static site with simple HTML attributes.
         </p>
         <div class="btn-group">
           <a href="demo.html" class="btn btn--primary">View Demo</a>
@@ -64,12 +64,11 @@
 
     <section class="section">
       <div class="container">
-        <h2 class="text-center mb-lg">The Tailwind of Frontend Behavior</h2>
+        <h2 class="text-center mb-lg">No Server Required</h2>
         <p class="text-center text-muted mb-lg" style="max-width: 700px; margin-left: auto; margin-right: auto;">
-          Just as Tailwind CSS lets you style elements with utility classes,
-          genX lets you add behavior with HTML attributes. Format currencies,
-          make elements draggable, add accessibility features &mdash; all without
-          writing JavaScript.
+          Format currencies, validate forms, sort tables, bind data reactively &mdash;
+          features that traditionally required a backend, now available on any static site.
+          Just HTML attributes. No JavaScript to write. No server to maintain.
         </p>
 
         <div class="showcase mb-lg">
