fix(site): clarify genX works with backends too
- "Works beautifully with a backend too"
- Updated compatibility to mention Django, Rails, server-rendered apps

--- a/site/index.html
+++ b/site/index.html
@@ -68,7 +68,7 @@
         <p class="text-center text-muted mb-lg" style="max-width: 700px; margin-left: auto; margin-right: auto;">
           Format currencies, validate forms, sort tables, bind data reactively &mdash;
           features that traditionally required a backend, now available on any static site.
-          Just HTML attributes. No JavaScript to write. No server to maintain.
+          Works beautifully with a backend too. Just HTML attributes, wherever you deploy.
         </p>
 
         <div class="showcase mb-lg">
@@ -172,8 +172,8 @@ document.querySelectorAll('.price').forEach(el => {
           </div>
           <div class="feature">
             <div class="feature__prefix">Compatible</div>
-            <h3 class="feature__title">Framework Agnostic</h3>
-            <p class="feature__desc">Works with vanilla HTML, React, Vue, Angular, htmx, or anything else.</p>
+            <h3 class="feature__title">Works Everywhere</h3>
+            <p class="feature__desc">Static sites, SPAs, server-rendered apps. Vanilla HTML, React, Vue, Django, Rails &mdash; wherever you have HTML.</p>
           </div>
         </div>
       </div>
