refactor(site): reposition as frontend independence tool
- "Frontend devs, unite. Stop waiting on the backend."
- "Declare Independence" section emphasizes autonomy from backend PRs
- Works with or without a server - it doesn't matter

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>genX - The Tailwind of Frontend Behavior</title>
-  <meta name="description" content="Backend features without the backend. Add interactivity to any static site with simple HTML attributes.">
+  <meta name="description" content="Stop waiting on backend changes for UI tweaks. Formatting, tables, binding, accessibility — all from HTML attributes. With a server or without.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
@@ -29,8 +29,9 @@
         <p class="hero__tagline">The Tailwind of Frontend Behavior</p>
         <h1 class="hero__title">gen<span class="x">X</span></h1>
         <p class="hero__subtitle">
-          Backend features without the backend.<br>
-          Add interactivity to any static site with simple HTML attributes.
+          Frontend devs, unite. Stop waiting on the backend.<br>
+          Formatting, tables, binding, accessibility &mdash; all from HTML attributes.<br>
+          With a server or without. It doesn't matter.
         </p>
         <div class="btn-group">
           <a href="demo.html" class="btn btn--primary">View Demo</a>
@@ -64,11 +65,11 @@
 
     <section class="section">
       <div class="container">
-        <h2 class="text-center mb-lg">No Server Required</h2>
+        <h2 class="text-center mb-lg">Declare Independence</h2>
         <p class="text-center text-muted mb-lg" style="max-width: 700px; margin-left: auto; margin-right: auto;">
-          Format currencies, validate forms, sort tables, bind data reactively &mdash;
-          features that traditionally required a backend, now available on any static site.
-          Works beautifully with a backend too. Just HTML attributes, wherever you deploy.
+          Tired of waiting on backend PRs for UI changes? Format currencies, sort tables,
+          bind data, add accessibility &mdash; ship it yourself, today.
+          No API changes. No deploy coordination. Just HTML.
         </p>
 
         <div class="showcase mb-lg">
